<resources>
    <string name="app_name" translatable="false">Cookbook</string>
    <string name="title">Title</string>
    <string name="save">Save</string>
    <string name="type">Type</string>
    <string name="amount">Amount</string>
    <string name="measurement">Measurement</string>
    <string name="tag">Tag</string>
    <string name="done">Done</string>
    <string name="modify_amount">Modify amount count</string>
    <string name="serve">Serve</string>
    <string name="cancel">Cancel</string>
    <string name="never_show_this_message">Never show this message</string>
    <string name="add_meal">Add meal</string>
    <string name="next_page">Next page</string>
    <string name="ingredient_name">Ingredient name</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="all_ingredients">All ingredients</string>
    <string name="no_ingredients">No ingredients…</string>
    <string name="write_down_the_recipe_steps">Write down the recipe steps</string>
    <string name="add_more_step">Add more step</string>
    <string name="time_to_cook">Time to cook</string>
    <string name="time_measurement">Time measurement</string>
    <string name="how_many_times_can_eat">How many times can eat?</string>
    <string name="recipe_title">Recipe title</string>
    <string name="search_recipe">Search…</string>
    <string name="selected_ingredients">Selected ingredients</string>
    <string name="storage">Storage</string>
    <string name="recipe">Recipe</string>
    <string name="minute">Minute</string>
    <string name="hour">Hour</string>
    <string name="piece">Piece</string>
    <string name="dl">dl</string>
    <string name="l">l</string>
    <string name="g">g</string>
    <string name="dkg">dag</string>
    <string name="kg">kg</string>
    <string name="liquid">Liquid</string>
    <string name="solid">Solid</string>
    <string name="dish_added_to_storage">Dish added to storage</string>
    <string name="can_not_make_the_meal_incompatible_ingredient_s">Can not make the meal. Incompatible ingredient: %1$s</string>
    <string name="settings">Settings</string>
    <string name="create_new_tag">Create new tag</string>
    <string name="tags">Tags</string>
    <string name="theme">Theme</string>
    <string name="menu">Menu</string>
    <string name="one_or_more_step_fields_are_empty">One or more step fields are empty.</string>
    <string name="missing_ingredients_steps"><![CDATA[Missing ingredients & steps!]]></string>
    <string name="you_haven_t_added_any_ingredients_yet">You haven\'t added any ingredients yet.</string>
    <string name="you_re_missing_some_recipe_steps">You\'re missing some recipe steps.</string>
    <string name="let_s_create_recipes">Let\'s create recipes!</string>
</resources>