...
                    color = MaterialTheme.colorScheme.primary
                )
            },
            trailingIcon = {
                IconButton(
                    modifier = Modifier
                        .testTag("DropdownMenuIconTag"),
                    onClick = { isDropdownMenuVisible = true }) {
                    Icon(
                        modifier = Modifier,
                        imageVector = Icons.Rounded.MoreVert,
                        contentDescription = "measurements menu icon"
                    )
...
